--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "truffle-init-webpack",
-  "version": "0.0.2",
-  "description": "Frontend example using truffle v3",
+  "name": "b9lab-final-exam",
+  "repository": "https://git.academy.b9lab.com/ETH-15-exam-projects/jadkison-code",
+  "version": "0.1.0",
+  "description": "Frontend for the b9labs TollBooth final exam project",
   "scripts": {
     "lint": "eslint ./",
     "build": "webpack",
-    "dev": "webpack-dev-server"
+    "dev": "webpack-dev-server --host 0.0.0.0 --watch-poll"
   },
-  "author": "Douglas von Kohorn",
+  "author": "Jason Adkison",
   "license": "MIT",
   "devDependencies": {
     "babel-cli": "^6.22.2",
@@ -17,6 +18,8 @@
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-preset-env": "^1.1.8",
     "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.22.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.1",
@@ -28,6 +31,13 @@
     "eslint-plugin-standard": "^2.0.0",
     "html-webpack-plugin": "^2.28.0",
     "json-loader": "^0.5.4",
+    "prop-types": "^15.6.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "style-loader": "^0.13.1",
     "truffle-contract": "^1.1.11",
     "web3": "^0.18.2",
